--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -21,7 +21,7 @@
 
         </RelativeLayout>
 
-        <com.example.joseramos.lyricsappjlrf.presentation.components.RoundedImageView
+        <ImageView
             android:id="@+id/iv_customer_profile_picture"
             android:layout_width="120dp"
             android:layout_height="120dp"
